api_versioned_docs/version-12.1.2.1/avalonia/controls/documents/primitives/actions/numberedmarkerstyleaction.mdx
---
title: 'NumberedMarkerStyleAction'
hide_title: true
slug: '/avalonia/controls/documents/primitives/actions/numberedmarkerstyleaction'
uid: 'Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction'
commentId: 'T:Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Actions'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">NumberedMarkerStyleAction Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives.Actions</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Action for changing the [Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle](xref:Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle) of numbered (ordered) lists.

</div>

<div className="apiref-page__signature">

```csharp
public class NumberedMarkerStyleAction
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="editoraction">EditorAction</a> <span className="apiref-page__relation-separator">-&gt;</span> NumberedMarkerStyleAction
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="iblockpropertyaction">IBlockPropertyAction</a>, IBlockPropertyAction&lt;TextMarkerStyle&gt;, <a href="ieditoraction">IEditorAction</a>, <a href="ipropertyaction">IPropertyAction</a>, IPropertyAction&lt;TextMarkerStyle&gt;
</div>
</div>

## Remarks

[Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction.CanExecute(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction.CanExecute%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) returns true only when the caret is inside a numbered
[Avalonia.Controls.Documents.List](xref:Avalonia.Controls.Documents.List) (Decimal, LowerLatin, UpperLatin, LowerRoman, UpperRoman).
[Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction.GetAvailableValues](xref:Avalonia.Controls.Documents.Primitives.Actions.NumberedMarkerStyleAction.GetAvailableValues) returns only the numbered marker styles.

## Constructors

| Name | Description |
| --- | --- |
| [NumberedMarkerStyleAction](#uid-df4fa6b796) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-df4fa6b796"></span>

### NumberedMarkerStyleAction Constructor

```csharp
public NumberedMarkerStyleAction()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [CanExecute](#uid-56aeafec17) | Gets whether the action can currently execute. |
| [ClearValue](#uid-75a853aec2) | Clears the marker style. A list always has one, so this does nothing. |
| [Execute](#uid-96d3a49776) | Executes the action synchronously. |
| [ExecuteAsync](editoraction.mdx#uid-6a0258eff0) | Executes the action asynchronously. Inherited from [EditorAction](editoraction.mdx). |
| [GetAvailableValues](#uid-f6e99a4acc) | Returns numbered [Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle](xref:Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle) values. |
| [GetState](#uid-8250d7ee11) | Gets the current state of the action. |
| [GetValue](#uid-b83264d109) | Gets the current marker style of the first numbered list containing the caret/selection. |
| [HasConsistentValue](#uid-e262c5ae81) | Gets whether all affected blocks have the same value for this property. |
| [SetValue](#uid-26d59806f3) | Sets the marker style on all numbered lists covering the selection. |

<section className="apiref-page__member-entry">

<span id="uid-56aeafec17"></span>

### CanExecute Method

Gets whether the action can currently execute.

```csharp
public bool CanExecute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to check against.


#### Returns

bool

True if the action can execute; otherwise, false.


#### Remarks

This is called frequently to update UI state (button enabled/disabled).
Implementations should be fast and avoid heavy computation.

</section>

<section className="apiref-page__member-entry">

<span id="uid-75a853aec2"></span>

### ClearValue Method

Clears the marker style. A list always has one, so this does nothing.

```csharp
public void ClearValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor to act on.


</section>

<section className="apiref-page__member-entry">

<span id="uid-96d3a49776"></span>

### Execute Method

Executes the action synchronously.

```csharp
public void Execute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to execute on.


#### Remarks

For actions that require async operations (like file dialogs),
use [Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead.

</section>

<section className="apiref-page__member-entry">

<span id="uid-f6e99a4acc"></span>

### GetAvailableValues Method

Returns numbered [Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle](xref:Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle) values.

```csharp
public System.Collections.Generic.IEnumerable<Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle> GetAvailableValues()
```

#### Returns

System.Collections.Generic.IEnumerable&lt;Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-8250d7ee11"></span>

### GetState Method

Gets the current state of the action.

```csharp
public object GetState(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

object

The current state, or null if the action has no state. A toggle action returns
a boolean, a property action the current value.


#### Remarks

Read [Avalonia.Controls.Documents.Primitives.Actions.IToggleAction.IsChecked(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IToggleAction.IsChecked%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) or
[Avalonia.Controls.Documents.Primitives.Actions.IPropertyAction.GetValueAsObject(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IPropertyAction.GetValueAsObject%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead. Both say which family
the value came from, which an untyped object cannot.

</section>

<section className="apiref-page__member-entry">

<span id="uid-b83264d109"></span>

### GetValue Method

Gets the current marker style of the first numbered list containing the caret/selection.

```csharp
public Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle GetValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)


#### Returns

Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle


</section>

<section className="apiref-page__member-entry">

<span id="uid-e262c5ae81"></span>

### HasConsistentValue Method

Gets whether all affected blocks have the same value for this property.

```csharp
public bool HasConsistentValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host.


#### Returns

bool

True if all affected blocks have the same property value.
False if blocks have different values (mixed state).


#### Remarks

UI controls should show a mixed/indeterminate state when this returns false.
For example, a [ComboBox](xref:Avalonia.Controls.ComboBox) might show "Mixed" placeholder text.

For collapsed selections, this always returns true (single block).

</section>

<section className="apiref-page__member-entry">

<span id="uid-26d59806f3"></span>

### SetValue Method

Sets the marker style on all numbered lists covering the selection.

```csharp
public void SetValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host, Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle value)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)


`value` Avalonia.Controls.Documents.Primitives.DocumentNodes.TextMarkerStyle


</section>

## Properties

| Name | Description |
| --- | --- |
| [DisplayName](#uid-af249c1a19) | Gets the display name for UI purposes. |
| [Gesture](editoraction.mdx#uid-557e9af400) | Gets the optional keyboard gesture for this action. Inherited from [EditorAction](editoraction.mdx). |
| [Id](#uid-6507ea0707) | Gets the unique identifier for this action. |

<section className="apiref-page__member-entry">

<span id="uid-af249c1a19"></span>

### DisplayName Property

Gets the display name for UI purposes.

```csharp
public string DisplayName { get; set; }
```

#### Remarks

This is used for tooltips, menu items, and accessibility.

</section>

<section className="apiref-page__member-entry">

<span id="uid-6507ea0707"></span>

### Id Property

Gets the unique identifier for this action.

```csharp
public string Id { get; set; }
```

#### Remarks

IDs follow a hierarchical naming convention:

- Edit.Undo, Edit.Redo, Edit.Cut, etc.
- Format.Bold, Format.Italic, etc.
- Block.TextAlignment.Left, List.ToggleBulletList, etc.
[Avalonia.Controls.Documents.Primitives.Actions.EditorActionIds](xref:Avalonia.Controls.Documents.Primitives.Actions.EditorActionIds) names the identifier of every built-in action.

</section>

</ApiRefPage>

